tests/comp/sem/valid/declarations.mj
class A {

	public int field;

	public void test(boolean a) {
		a;
		int b;
		b;
		field;
	}

	public static void main(String[] args) {
	}

}
