tests/comp/sem/invalid/if_condition_not_boolean.mj
class A {

	public int foo;

	public void test() {
		/*** if (foo) { } ***/
	}

	public static void main(String[] args) {
	}

}
